objects/Line_item1__c.object
<CustomObject>
    <fields>
        <fullName>Line_Item_Total__c</fullName>
        <formula>Unit_Price__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>invoice1__c</fullName>
        <label>invoice1</label>
        <referenceTo>invoice_statement__c</referenceTo>
        <relationshipLabel>Line items1</relationshipLabel>
        <relationshipName>Line_items1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Line item1</label>
    <nameField>
        <label>Line item1 Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line items1</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_Quantity</fullName>
        <active>true</active>
        <errorConditionFormula>(Quantity__c  &lt;= 0)</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>You can’t order more items than are in stock</errorMessage>
    </validationRules>
</CustomObject>